--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,10 @@ body {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  border: 1px solid #000;
-  background: linear-gradient(to bottom, blue, lightblue);
-  border-radius: 20px;
+  border: 6px solid black;
+  background: whitesmoke;
+  box-shadow: 15px 15px 0px #000;
+  padding-bottom: 70px; /* Add extra padding to the bottom */
 }
 
 .display {
@@ -42,14 +43,13 @@ body {
   margin-right: 30px;
 }
 
-.buttons {
+.buttons { /* wrapper for the buttons */
   display: flex;
   width: 100%;
   height: 100%;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-
 }
 
 .main-box span { /* inside the buttons */
@@ -63,16 +63,20 @@ body {
   height: 75px;
   border: 1px solid #000;
   border-radius: 8px;
-  background-color: green;
+  background-color: black;
   cursor: pointer;
   margin-left: 11px;
   margin-right: 11px;
   user-select: none;
-
+  transition: background-color 0.15s ease, transform 0.15s ease;
 }
 
 .main-box span:hover {
-  background-color: #97a898;
+    transform: scale(1.05);
+}
+
+.main-box span:hover {
+  background-color: #245225;
 }
 
 .main-box span:active {
@@ -80,7 +84,7 @@ body {
 }
 
 #AC {
-  background-color: red;
+  background-color: rgb(106, 24, 24);
 }
 #AC:hover {
   background-color: #f44336;
