--- a/styles.css
+++ b/styles.css
@@ -15,15 +15,21 @@ body {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  border: 6px solid black;
+  border: 8px solid black;
   background: whitesmoke;
-  box-shadow: 15px 15px 0px #000;
+  box-shadow: 17px 17px 0px #000;
   padding-bottom: 70px; /* Add extra padding to the bottom */
+  padding-top:35px;
+  transition: transform 0.15s ease-in-out;
+}
+
+.main-box:hover {
+  transform: scale(1.03);
 }
 
 .display {
   width: 100%;
-  height: 50px;
+  height: 60px;
   display: flex;
   align-items: center;
   border: 1px solid #e2d8d8;
@@ -63,7 +69,7 @@ body {
   height: 75px;
   border: 1px solid #000;
   border-radius: 8px;
-  background-color: black;
+  background-color: hwb(0 0% 100%);
   cursor: pointer;
   margin-left: 11px;
   margin-right: 11px;
