--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
   width: 100%;
   height: 60px;
   display: flex;
+  flex-direction: row; /* just making sure before adding AC */
   align-items: center;
   border: 1px solid #e2d8d8;
   background-color: lightgray;
@@ -92,6 +93,11 @@ body {
 
 #AC {
   background-color: rgb(106, 24, 24);
+  border: none;
+  height: 60%;
+  width: 30%;
+  font-size: 25px;
+  border: 2px solid #000;
 }
 #AC:hover {
   background-color: #f44336;
