--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@ body {
 }
 
 .main-box {
-  padding: 50px;
-  width: 400px;
+  padding: 5%;
+  width: 80%;
+  max-width: 400px;
   height: 400px;
   display: flex;
   flex-direction: row;
@@ -21,6 +22,7 @@ body {
   padding-bottom: 70px; /* Add extra padding to the bottom */
   padding-top:35px;
   transition: transform 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  margin-bottom: 20px;
 }
 
 .main-box:hover {
@@ -37,10 +39,11 @@ body {
   border: 1px solid #e2d8d8;
   background-color: lightgray;
   border-radius: 10px;
+  margin-bottom: 5px;
 }
 
 .display-text {
-  font-size: 30px;
+  font-size: 1.5rem;
   color: black;
   text-align: center;
   display: flex;
@@ -48,20 +51,24 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-  margin-right: 30px;
+  padding-right: 30px;
+  overflow: scroll;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .buttons { /* wrapper for the buttons */
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
   height: 100%;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 .main-box span { /* inside the buttons */
-  font-size: 40px;
+  font-size: 2rem;
   color: white;
   text-align: center;
   display: flex;
@@ -96,7 +103,7 @@ body {
   border: none;
   height: 60%;
   width: 30%;
-  font-size: 25px;
+  font-size: 1.5rem;
   border: 2px solid #000;
 }
 #AC:hover {
@@ -104,4 +111,28 @@ body {
 }
 #AC:active {
   background-color: #d32f2f;
+}
+
+@media (max-width: 600px) {
+  .main-box {
+  padding: 5% 3% 10%;
+  width: 80%;
+  max-width: 400px;
+  height: 400px;
+  }
+
+  .main-box span {
+    font-size: 1.5rem; /* Reduce button font size */
+    height: 65px; /* Reduce button height */
+  }
+
+  .display {
+    height: 50px; /* Reduce display height */
+  }
+
+  #AC {
+    width: 25%; /* Adjust AC button width */
+    font-size: 1.2rem;
+  }
+
 }
