--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,11 @@ body {
 }
 
 .main-box {
-  padding: 5%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 8%;
+  padding-bottom: 8%;
+
   width: 80%;
   max-width: 400px;
   height: 400px;
@@ -22,7 +26,6 @@ body {
   padding-bottom: 70px; /* Add extra padding to the bottom */
   padding-top:35px;
   transition: transform 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  margin-bottom: 20px;
 }
 
 .main-box:hover {
@@ -113,17 +116,19 @@ body {
   background-color: #d32f2f;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 515px) {
   .main-box {
-  padding: 5% 3% 10%;
-  width: 80%;
+  padding-left: 1%;
+  padding-right: 1%;
   max-width: 400px;
   height: 400px;
+  min-width: 400px;
   }
 
   .main-box span {
-    font-size: 1.5rem; /* Reduce button font size */
-    height: 65px; /* Reduce button height */
+    font-size: 1.5rem;
+    height: 60px;
+    width: 70px;
   }
 
   .display {
