--- a/styles.css
+++ b/styles.css
@@ -78,27 +78,30 @@ body {
   justify-content: center;
   align-items: center;
   width: 75px;
-  height: 75px;
-  border: 1px solid #000;
+  height: 65px;
+  /* border: 1px solid #000; */
   border-radius: 8px;
   background-color: hwb(0 0% 100%);
   cursor: pointer;
   margin-left: 11px;
   margin-right: 11px;
   user-select: none;
-  transition: background-color 0.15s ease, transform 0.15s ease;
+
+  box-shadow: 0px 10px 0px #444444;
+
+  transition: background-color 0.15s ease, transform 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .main-box span:hover {
-    transform: scale(1.05);
-}
-
-.main-box span:hover {
+  transform: scale(1.05);
   background-color: #245225;
 }
 
 .main-box span:active {
+  transform: scale(1.05);
   background-color: #3e8e41;
+  transform: translateY(10px);
+  box-shadow: 0px 0px 0px #444444;
 }
 
 #AC {
@@ -108,9 +111,11 @@ body {
   width: 30%;
   font-size: 1.5rem;
   border: 2px solid #000;
+  box-shadow: 0px 0px 0px;
 }
 #AC:hover {
   background-color: #f44336;
+  transform: none;
 }
 #AC:active {
   background-color: #d32f2f;
